hair-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hair-product-frontend
  labels:
    env: prod
    owner: sheriff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hair-frontend
  template:
    metadata:
      labels:
        app: hair-frontend
        env: prod
        owner: sheriff
    spec:
      containers:
      - name: nginx
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: frontend-html
